--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       run: raku -v
 
     - name: Install dependencies
-      run: zef install --deps-only --/test --test-depends .
+      run: zef install --deps-only --exclude=usb --/test --test-depends .
 
     - name: Build the helper
       run: zef build .
